// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DisplayReference > renders inside of model context 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    autocomplete="off"
    class="form-control"
    id="dummy"
    name="dummy"
    path="dummy"
    readonly=""
    type="text"
    value="-"
  />
</DocumentFragment>
`;

exports[`DisplayReference > should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    autocomplete="off"
    class="form-control"
    id="dummy"
    name="dummy"
    path="dummy"
    readonly=""
    type="text"
    value="-"
  />
</DocumentFragment>
`;

exports[`DisplayReference > should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    autocomplete="off"
    class="form-control"
    id="dummy"
    name="dummy"
    path="dummy"
    readonly=""
    type="text"
    value="baz"
  />
</DocumentFragment>
`;

exports[`DisplayReference > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
